--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "nextjs",
+  "name": "applinks",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
